--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --display-modules"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "url-loader": "^1.1.2",
     "webpack": "^3.12.0"
   },
   "dependencies": {
