--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
+    "jshint": "^2.10.2",
+    "jshint-loader": "^0.8.4",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "url-loader": "^1.1.2",
