--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "clean-webpack-plugin": "^2.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "jshint": "^2.10.2",
     "jshint-loader": "^0.8.4",
+    "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "url-loader": "^1.1.2",
