--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --display-modules"
+    "build": "webpack --display-modules --config ./config/webpack.build.js",
+    "dev": "webpack-dev-server --config ./config/webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "clean-webpack-plugin": "^2.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jshint": "^2.10.2",
     "jshint-loader": "^0.8.4",
@@ -23,7 +25,9 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "url-loader": "^1.1.2",
-    "webpack": "^3.12.0"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.5",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "css-loader": "^2.1.1",
