--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^2.0.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
