--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --display-modules --config ./config/webpack.build.js",
-    "dev": "webpack-dev-server --config ./config/webpack.dev.js"
+    "start": "webpack-dev-server --config ./config/webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
