--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --display-modules --config ./config/webpack.build.js",
-    "start": "webpack-dev-server --config ./config/webpack.dev.js"
+    "build": "webpack --config ./config/webpack.build.js",
+    "start": "webpack-dev-server --config ./config/webpack.dev.js",
+    "dist": "webpack --display-modules --config ./config/webpack.dist.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
+    "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -25,6 +27,7 @@
     "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "postcss-loader": "^3.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.5",
