--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "json-loader": "^0.5.7",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "less-plugin-clean-css": "^1.5.1",
     "postcss-loader": "^3.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^3.12.0",
